--- a/Compilador.csproj
+++ b/Compilador.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Lexico.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sintactico.cs" />
     <Compile Include="Simbolo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
